// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Anchor /> > should match snapshot with label, icon and to props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <a
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_a__18vhvli17 elementReset__18vhvli3 focusOutline_focusOutlineStyle__tq83zq0 sprinkles_colour_link__onxwju30 sprinkles_display_inline-flex_mobile__onxwju79 focusOutline_focusOutlineStyle__tq83zq0"
    href="https://www.autoguru.com.au"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwju79 sprinkles_colour_link__onxwju30 sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_fontWeight_bold__onxwju5m sprinkles_alignItems_center_mobile__onxwjumt sprinkles_gap_2_mobile__onxwjui9"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6d Icon_makeResponsiveStyle_key_bp__1gy3ire0"
        data-od-component="icon"
      >
        <svg
          aria-hidden="true"
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_width_full_mobile__onxwjuh5 sprinkles_height_full_mobile__onxwjufl"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
      <span>
        Hello World!
      </span>
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > should match snapshot without label 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <a
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_a__18vhvli17 elementReset__18vhvli3 focusOutline_focusOutlineStyle__tq83zq0 sprinkles_colour_link__onxwju30 sprinkles_display_inline-flex_mobile__onxwju79 focusOutline_focusOutlineStyle__tq83zq0"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwju79 sprinkles_colour_link__onxwju30 sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_fontWeight_bold__onxwju5m sprinkles_alignItems_center_mobile__onxwjumt sprinkles_gap_2_mobile__onxwjui9"
    >
      <span />
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > when custom component > should match snapshot with label, icon custom component 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <button
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 elementReset_resetVariants_hasBorder_true__18vhvli1f elementReset_borderReset__18vhvli1 sprinkles_borderBottomWidth_none_mobile__onxwjud9 sprinkles_borderLeftWidth_none_mobile__onxwjuct sprinkles_borderRightWidth_none_mobile__onxwjudp sprinkles_borderTopWidth_none_mobile__onxwjue5 sprinkles_paddingLeft_4_mobile__onxwjuup sprinkles_paddingRight_4_mobile__onxwjuvt sprinkles_paddingTop_none_mobile__onxwjuxl sprinkles_paddingBottom_none_mobile__onxwjuu9 sprinkles_display_inline-block_mobile__onxwju71 sprinkles_overflow_hidden_mobile__onxwju7h sprinkles_borderRadius_md_mobile__onxwjubt sprinkles_textAlign_center_mobile__onxwjub1 elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_lineHeight_4_mobile__onxwju99 sprinkles_fontWeight_semiBold__onxwju5l typography_color_white__yhjp336 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_default__p2yon57 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_3__p2yon5m sprinkles_colour_link__onxwju30 sprinkles_display_inline-flex_mobile__onxwju79 focusOutline_focusOutlineStyle__tq83zq0"
    type="button"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_height_full_mobile__onxwjufl sprinkles_alignItems_center_mobile__onxwjumt sprinkles_justifyContent_center_mobile__onxwjuoh Button_body__p2yon50"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwju79 sprinkles_colour_link__onxwju30 sprinkles_fontSize_4_mobile__onxwjua9 sprinkles_fontWeight_bold__onxwju5m sprinkles_alignItems_center_mobile__onxwjumt sprinkles_gap_2_mobile__onxwjui9"
      >
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwju6d Icon_makeResponsiveStyle_key_bp__1gy3ire0"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_width_full_mobile__onxwjuh5 sprinkles_height_full_mobile__onxwjufl"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <span>
          Hello World!
        </span>
      </span>
    </div>
  </button>
</div>
`;
